--- a/DemandaInstantanea.html
+++ b/DemandaInstantanea.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/portal/resources/js/mustache/mustache-min.js"></script>
 	<script type="text/javascript" src="/style-guide/js/fluig-style-guide.min.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="fluig-style-guide">
@@ -14,7 +15,7 @@
 
 	<header>
 		<div class="panel panel-default">
-			<div class="panel-heading">
+			<div class="panel-heading" id="painel_head">
 				<h1>Solicitação de Demanda Instantânea</h1>
 			</div>
 		</div>
@@ -68,6 +69,93 @@
 	</div>
 
 	<!-- Fim do Painel -->
+
+	<!-- Painel da Solução -->
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="painel_sol">
+			<h3 class="panel-title">Dados da Demanda</h3>
+		</div>
+
+		<div class="panel-body">
+			<div class="form-group row">
+				<div class="col-md-2">
+					<label for="formatoSolucao">Formato da Solução:</label>
+					<input type="text" class="form-control" name="formatoSolucao" id="formatoSolucao">
+				</div>
+
+				<div class="col-md-3">
+					<label for="nomeSolucao">Nome da Solução:</label>
+					<input type="text" class="form-control" name="nomeSolucao" id="nomeSolucao">
+				</div>
+
+				<div class="col-md-3">
+					<label for="subtituloSolucao">Subtítulo:</label>
+					<input type="text" class="form-control" name="subtituloSolucao" id="subtituloSolucao">
+				</div>
+
+				<div class="col-md-3">
+					<label for="temaSolucao">Tema da Solução:</label>
+					<input type="text" class="form-control" name="temaSolucao" id="temaSolucao">
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<div class="col-md-2">
+					<label for="publicoAlvo">Público Alvo:</label>
+					<input type="text" class="form-control" name="publicoAlvo" id="publicoAlvo">
+				</div>
+
+				<div class="col-md-2">
+					<label for="grauEscolaridade">Grau de Escolaridade:</label>
+					<select class="form-control" name="grauEscolaridade" id="grauEscolaridade">
+						<option value="" selected disabled>Selecione uma Opção</option>
+						<option value="Ensino Fundamental">Ensino Fundamental</option>
+						<option value="Ensino Médio">Ensino Médio</option>
+						<option value="Ensino Superior">Ensino Superior</option>
+						<option value="Irrestrito">Sem Restrições</option>
+					</select>
+				</div>
+
+				<div class="col-md-2">
+					<label for="modalidadeSolucao">Modalidade:</label>
+					<select class="form-control" name="modalidadeSolucao" id="modalidadeSolucao">
+						<option value="" selected disabled>Selecione uma Opção</option>
+						<option value="Presencial">Presencial</option>
+						<option value="Híbrido">Híbrido</option>
+						<option value="Online">Online</option>
+					</select>
+				</div>
+
+				<div class="col-md-2">
+					<label for="abordagemSolucao">Abordagem</label>
+					<input type="text" class="form-control" name="abordagemSolucao" id="abordagemSolucao">
+				</div>
+
+				<div class="col-md-3">
+					<label for="cargaHoraria">Carga Horária</label>
+					<input type="text" class="form-control" name="cargaHoraria" id="cargaHoraria">
+				</div>
+			</div>
+
+			<div class="form-group row">				
+				<div class="col-md-3">
+					<label for="momentoEmpresarial">Momento Empresarial</label>
+					<input type="text" class="form-control" name="momentoEmpresarial" id="momentoEmpresarial">
+				</div>
+
+				<div class="col-md-3">
+					<label for="ambienteAprendizagem">Ambiente de Aprendizagem</label>
+					<input type="text" class="form-control" name="ambienteAprendizagem" id="ambienteAprendizagem">
+				</div>
+
+				<div class="col-md-5">
+					<label for="estrategiasSolucao">Estratégias Metodológicas</label>
+					<input type="text" class="form-control" name="estrategiasSolucao" id="estrategiasSolucao">
+				</div>
+			</div>
+		</div>
+	</div>
 	
 </form>
 </div>
