--- a/DemandaInstantanea.html
+++ b/DemandaInstantanea.html
@@ -1,163 +1,260 @@
 <html>
+
 <head>
-	<link type="text/css" rel="stylesheet" href="/style-guide/css/fluig-style-guide.min.css"/>
+	<link type="text/css" rel="stylesheet" href="/style-guide/css/fluig-style-guide.min.css" />
 	<script type="text/javascript" src="/portal/resources/js/jquery/jquery.js"></script>
 	<script type="text/javascript" src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/portal/resources/js/mustache/mustache-min.js"></script>
 	<script type="text/javascript" src="/style-guide/js/fluig-style-guide.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-<div class="fluig-style-guide">
-<form name="form" role="form">
+	<div class="fluig-style-guide">
+		<form name="form" role="form">
 
-	<!-- Painel de Cabeçalho -->
+			<!-- Painel de Cabeçalho -->
 
-	<header>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="painel_head">
-				<h1>Solicitação de Demanda Instantânea</h1>
+			<header>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="painel_head">
+						<h1>Solicitação de Demanda Instantânea</h1>
+					</div>
+				</div>
+			</header>
+
+			<!-- Fim do Painel Cabeçalho -->
+
+			<!-- Painel do Requisitante -->
+
+			<input type="hidden" class="form-control" name="arrSigners" id="arrSigners" readonly value="" />
+
+			<div class="panel panel-default" id="somePainelReq">
+				<div class="panel-heading" id="painel_req">
+					<h3 class="panel-title"><i class="flaticon flaticon-person icon-md" aria-hidden="true"></i>Dados do
+						Requisitante</h3>
+				</div>
+
+				<input type="hidden" name="codProjeto" id="codProjeto">
+				<input type="hidden" name="codAcao" id="codAcao">
+				<input type="hidden" name="codRecurso" id="codRecurso">
+
+				<div class="panel-body">
+					<div class="form-group row">
+						<div class="col-md-2" id="NomeSolicita">
+							<label for="cmb_NomeSolicitante">Nome Solicitante</label>
+							<select name="cmb_NomeSolicitante" id="cmb_NomeSolicitante" dataset="colleague"
+								datasetkey="colleagueId" datasetvalue="colleagueName" class="form-control" readonly>
+							</select>
+						</div>
+
+						<div class="col-md-2" id="GerenteSolicita">
+							<label for="cmb_GerenteSolicitante">Gerente/Diretor</label>
+							<input type="text" class="form-control" name="cmb_GerenteSolicitante"
+								id="cmb_GerenteSolicitante" readonly>
+						</div>
+
+						<div class="col-md-2">
+							<label for="numProcesso">Numero da Solicitação</label>
+							<input type="text" class="form-control" name="numProcesso" id="numProcesso" readonly>
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<div class="col-md-3" id="UnidadeSolicita">
+							<label for="zm_UnidadeSolicitante">Unidade Solicitante</label>
+							<input type="text" class="form-control" name="cmb_UnidadeSolicitante"
+								id="cmb_UnidadeSolicitante" readonly>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-	</header>
 
-	<!-- Fim do Painel Cabeçalho -->
+			<!-- Fim do Painel -->
 
-	<!-- Painel do Requisitante -->
+			<!-- Painel da Solução -->
 
-	<input type="hidden" class="form-control" name="arrSigners" id="arrSigners" readonly
-	value="" />
-
-	<div class="panel panel-default" id="somePainelReq">
-		<div class="panel-heading" id="painel_req">
-			<h3 class="panel-title"><i class="flaticon flaticon-person icon-md" aria-hidden="true"></i>Dados do Requisitante</h3>
-		</div>
-
-		<input type="hidden" name="codProjeto" id="codProjeto">
-		<input type="hidden" name="codAcao" id="codAcao">
-		<input type="hidden" name="codRecurso" id="codRecurso">
-
-		<div class="panel-body">
-			<div class="form-group row">
-				<div class="col-md-2" id="NomeSolicita">
-					<label for="cmb_NomeSolicitante">Nome Solicitante</label>
-					<select name="cmb_NomeSolicitante" id="cmb_NomeSolicitante" dataset="colleague"
-						datasetkey="colleagueId" datasetvalue="colleagueName" class="form-control" readonly>
-					</select>
+			<div class="panel panel-default">
+				<div class="panel-heading" id="painel_sol">
+					<h3 class="panel-title">Dados da Demanda</h3>
 				</div>
 
-				<div class="col-md-2" id="GerenteSolicita">
-					<label for="cmb_GerenteSolicitante">Gerente/Diretor</label>
-					<input type="text" class="form-control" name="cmb_GerenteSolicitante"
-						id="cmb_GerenteSolicitante" readonly>
-				</div>
+				<div class="panel-body">
+					<div class="form-group row">
+						<div class="col-md-3">
+							<label for="formatoSolucao">Formato da Solução:</label>
+							<input type="text" class="form-control" name="formatoSolucao" id="formatoSolucao">
+						</div>
 
-				<div class="col-md-2">
-					<label for="numProcesso">Numero da Solicitação</label>
-					<input type="text" class="form-control" name="numProcesso" id="numProcesso" readonly>
+						<div class="col-md-3">
+							<label for="nomeSolucao">Nome da Solução:</label>
+							<input type="text" class="form-control" name="nomeSolucao" id="nomeSolucao">
+						</div>
+
+						<div class="col-md-3">
+							<label for="subtituloSolucao">Subtítulo:</label>
+							<input type="text" class="form-control" name="subtituloSolucao" id="subtituloSolucao">
+						</div>
+
+						<div class="col-md-3">
+							<label for="temaSolucao">Tema da Solução:</label>
+							<input type="text" class="form-control" name="temaSolucao" id="temaSolucao">
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<div class="col-md-2">
+							<label for="publicoAlvo">Público Alvo:</label>
+							<input type="text" class="form-control" name="publicoAlvo" id="publicoAlvo">
+						</div>
+
+						<div class="col-md-2">
+							<label for="grauEscolaridade">Grau de Escolaridade:</label>
+							<select class="form-control" name="grauEscolaridade" id="grauEscolaridade">
+								<option value="" selected disabled>Selecione uma Opção</option>
+								<option value="Ensino Fundamental">Ensino Fundamental</option>
+								<option value="Ensino Médio">Ensino Médio</option>
+								<option value="Ensino Superior">Ensino Superior</option>
+								<option value="Irrestrito">Sem Restrições</option>
+							</select>
+						</div>
+
+						<div class="col-md-2">
+							<label for="modalidadeSolucao">Modalidade:</label>
+							<select class="form-control" name="modalidadeSolucao" id="modalidadeSolucao">
+								<option value="" selected disabled>Selecione uma Opção</option>
+								<option value="Presencial">Presencial</option>
+								<option value="Híbrido">Híbrido</option>
+								<option value="Online">Online</option>
+							</select>
+						</div>
+
+						<div class="col-md-3">
+							<label for="abordagemSolucao">Abordagem:</label>
+							<input type="text" class="form-control" name="abordagemSolucao" id="abordagemSolucao">
+						</div>
+
+						<div class="col-md-3">
+							<label for="cargaHoraria">Carga Horária:</label>
+							<input type="text" class="form-control" name="cargaHoraria" id="cargaHoraria">
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<div class="col-md-3">
+							<label for="momentoEmpresarial">Momento Empresarial:</label>
+							<input type="text" class="form-control" name="momentoEmpresarial" id="momentoEmpresarial">
+						</div>
+
+						<div class="col-md-3">
+							<label for="ambienteAprendizagem">Ambiente de Aprendizagem:</label>
+							<input type="text" class="form-control" name="ambienteAprendizagem"
+								id="ambienteAprendizagem">
+						</div>
+
+						<div class="col-md-6">
+							<label for="estrategiasSolucao">Estratégias Metodológicas:</label>
+							<input type="text" class="form-control" name="estrategiasSolucao" id="estrategiasSolucao">
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<div class="col-md-6">
+							<label for="competenciaSolucao">Competências Gerais:</label>
+							<textarea class="form-control" rows="4" name="competenciaSolucao"
+								id="competenciaSolucao"></textarea>
+						</div>
+
+						<div class="col-md-6">
+							<label for="programaSolucao">Conteúdo Programático:</label>
+							<textarea class="form-control" rows="4" name="programaSolucao"
+								id="programaSolucao"></textarea>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+						<div class="panel-heading" id="painel_mat">
+							<h3 class="panel-title">Materiais para a Solução</h3>
+						</div>
+
+						<div class="form-group row">
+							<div class="panel-body col-md-6">
+								<div class="form-group row">
+									<div class="col-md-12">
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Eventos" name="Eventos">
+											<label for="Eventos">Ficha técnica do produto |</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Coffee" name="Coffee">
+											<label for="Coffee">Argumento de vendas |</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Logo" name="Logo">
+											<label for="Logo">Livro do participante ㅤㅤ|</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Apoio" name="Apoio">
+											<label for="Apoio">Material de Apoio</label>
+										</div>
+										<br>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Jornada" name="Jornada">
+											<label for="Jornada">Vídeo de apresentação ㅤ|</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Estrategia" name="Estrategia">
+											<label for="Estrategia">Manual de orientação |</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Imprensa" name="Imprensa">
+											<label for="Imprensa">Arquivo com Capas ㅤㅤㅤ|</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Cobertura" name="Cobertura">
+											<label for="Cobertura">Slides</label>
+										</div>
+										<br>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Grafica" name="Grafica">
+											<label for="Grafica">Plano de aplicação ㅤㅤ  |</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Outros" name="Outros">
+											<label for="Outros">Cessão de direitos ㅤㅤ|</label>
+										</div>
+										<div class="checkbox-inline">
+											<input type="checkbox" id="Divulgacao" name="Divulgacao">
+											<label for="Divulgacao">Material de Divulgação ㅤ|</label>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel-body col-md-6">
+								<div class="card" id="card_dimi">
+									<div class="card-body">
+										<h3 class="card-title">
+											<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
+											<lord-icon src="https://cdn.lordicon.com/wdqztrtx.json" trigger="loop"
+												colors="primary:#722F37"
+												style="width: 25px;height:25px;padding-top: 4px;">
+											</lord-icon>
+											Observação:
+										</h3>
+										<p class="card-text">Anexar quais materiais de divulgação e apoio serão necessários para a solução, caso vá ser utilizado. </p>
+										<ul>
+											</div>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
-			<div class="form-group row">
-				<div class="col-md-3" id="UnidadeSolicita">
-					<label for="zm_UnidadeSolicitante">Unidade Solicitante</label>
-					<input type="text" class="form-control" name="cmb_UnidadeSolicitante"
-						id="cmb_UnidadeSolicitante" readonly>
-				</div>
-			</div>
-		</div>
+		</form>
 	</div>
-
-	<!-- Fim do Painel -->
-
-	<!-- Painel da Solução -->
-
-	<div class="panel panel-default">
-		<div class="panel-heading" id="painel_sol">
-			<h3 class="panel-title">Dados da Demanda</h3>
-		</div>
-
-		<div class="panel-body">
-			<div class="form-group row">
-				<div class="col-md-2">
-					<label for="formatoSolucao">Formato da Solução:</label>
-					<input type="text" class="form-control" name="formatoSolucao" id="formatoSolucao">
-				</div>
-
-				<div class="col-md-3">
-					<label for="nomeSolucao">Nome da Solução:</label>
-					<input type="text" class="form-control" name="nomeSolucao" id="nomeSolucao">
-				</div>
-
-				<div class="col-md-3">
-					<label for="subtituloSolucao">Subtítulo:</label>
-					<input type="text" class="form-control" name="subtituloSolucao" id="subtituloSolucao">
-				</div>
-
-				<div class="col-md-3">
-					<label for="temaSolucao">Tema da Solução:</label>
-					<input type="text" class="form-control" name="temaSolucao" id="temaSolucao">
-				</div>
-			</div>
-			
-			<div class="form-group row">
-				<div class="col-md-2">
-					<label for="publicoAlvo">Público Alvo:</label>
-					<input type="text" class="form-control" name="publicoAlvo" id="publicoAlvo">
-				</div>
-
-				<div class="col-md-2">
-					<label for="grauEscolaridade">Grau de Escolaridade:</label>
-					<select class="form-control" name="grauEscolaridade" id="grauEscolaridade">
-						<option value="" selected disabled>Selecione uma Opção</option>
-						<option value="Ensino Fundamental">Ensino Fundamental</option>
-						<option value="Ensino Médio">Ensino Médio</option>
-						<option value="Ensino Superior">Ensino Superior</option>
-						<option value="Irrestrito">Sem Restrições</option>
-					</select>
-				</div>
-
-				<div class="col-md-2">
-					<label for="modalidadeSolucao">Modalidade:</label>
-					<select class="form-control" name="modalidadeSolucao" id="modalidadeSolucao">
-						<option value="" selected disabled>Selecione uma Opção</option>
-						<option value="Presencial">Presencial</option>
-						<option value="Híbrido">Híbrido</option>
-						<option value="Online">Online</option>
-					</select>
-				</div>
-
-				<div class="col-md-2">
-					<label for="abordagemSolucao">Abordagem</label>
-					<input type="text" class="form-control" name="abordagemSolucao" id="abordagemSolucao">
-				</div>
-
-				<div class="col-md-3">
-					<label for="cargaHoraria">Carga Horária</label>
-					<input type="text" class="form-control" name="cargaHoraria" id="cargaHoraria">
-				</div>
-			</div>
-
-			<div class="form-group row">				
-				<div class="col-md-3">
-					<label for="momentoEmpresarial">Momento Empresarial</label>
-					<input type="text" class="form-control" name="momentoEmpresarial" id="momentoEmpresarial">
-				</div>
-
-				<div class="col-md-3">
-					<label for="ambienteAprendizagem">Ambiente de Aprendizagem</label>
-					<input type="text" class="form-control" name="ambienteAprendizagem" id="ambienteAprendizagem">
-				</div>
-
-				<div class="col-md-5">
-					<label for="estrategiasSolucao">Estratégias Metodológicas</label>
-					<input type="text" class="form-control" name="estrategiasSolucao" id="estrategiasSolucao">
-				</div>
-			</div>
-		</div>
-	</div>
-	
-</form>
-</div>
 </body>
+
 </html>
