--- a/DemandaInstantanea.html
+++ b/DemandaInstantanea.html
@@ -237,7 +237,7 @@
 								<div class="form-group row">
 									<div class="col-md-6">
 										<div id="campo-divulg">
-											<label for="campoDivulg">Listar Materiais de Apoio:</label>
+											<label for="campoDivulg">Listar Materiais de Divulgação:</label>
 											<input type="text" class="form-control" name="campoDivulg" id="campoDivulg"
 												placeholder="Informe os detalhes do material de Divulgação">
 										</div>
