Validações desativadas - Teste

--- a/DemandaInstantanea.html
+++ b/DemandaInstantanea.html
@@ -84,34 +84,34 @@
 				<div class="panel-body">
 					<div class="form-group row">
 						<div class="col-md-3">
-							<label for="formatoSolucao">Formato da Solução:</label>
+							<label for="formatoSolucao">Formato da Solução:<strong>*</strong></label>
 							<input type="text" class="form-control" name="formatoSolucao" id="formatoSolucao">
 						</div>
 
 						<div class="col-md-3">
-							<label for="nomeSolucao">Nome da Solução:</label>
+							<label for="nomeSolucao">Nome da Solução:<strong>*</strong></label>
 							<input type="text" class="form-control" name="nomeSolucao" id="nomeSolucao">
 						</div>
 
 						<div class="col-md-3">
-							<label for="subtituloSolucao">Subtítulo:</label>
+							<label for="subtituloSolucao">Subtítulo:<strong>*</strong></label>
 							<input type="text" class="form-control" name="subtituloSolucao" id="subtituloSolucao">
 						</div>
 
 						<div class="col-md-3">
-							<label for="temaSolucao">Tema da Solução:</label>
+							<label for="temaSolucao">Tema da Solução:<strong>*</strong></label>
 							<input type="text" class="form-control" name="temaSolucao" id="temaSolucao">
 						</div>
 					</div>
 
 					<div class="form-group row">
 						<div class="col-md-2">
-							<label for="publicoAlvo">Público Alvo:</label>
+							<label for="publicoAlvo">Público Alvo:<strong>*</strong></label>
 							<input type="text" class="form-control" name="publicoAlvo" id="publicoAlvo">
 						</div>
 
 						<div class="col-md-2">
-							<label for="grauEscolaridade">Grau de Escolaridade:</label>
+							<label for="grauEscolaridade">Grau de Escolaridade:<strong>*</strong></label>
 							<select class="form-control" name="grauEscolaridade" id="grauEscolaridade">
 								<option value="" selected disabled>Selecione uma Opção</option>
 								<option value="Ensino Fundamental">Ensino Fundamental</option>
@@ -122,7 +122,7 @@
 						</div>
 
 						<div class="col-md-2">
-							<label for="modalidadeSolucao">Modalidade:</label>
+							<label for="modalidadeSolucao">Modalidade:<strong>*</strong></label>
 							<select class="form-control" name="modalidadeSolucao" id="modalidadeSolucao">
 								<option value="" selected disabled>Selecione uma Opção</option>
 								<option value="Presencial">Presencial</option>
@@ -132,43 +132,43 @@
 						</div>
 
 						<div class="col-md-3">
-							<label for="abordagemSolucao">Abordagem:</label>
+							<label for="abordagemSolucao">Abordagem:<strong>*</strong></label>
 							<input type="text" class="form-control" name="abordagemSolucao" id="abordagemSolucao">
 						</div>
 
 						<div class="col-md-3">
-							<label for="cargaHoraria">Carga Horária:</label>
+							<label for="cargaHoraria">Carga Horária:<strong>*</strong></label>
 							<input type="text" class="form-control" name="cargaHoraria" id="cargaHoraria">
 						</div>
 					</div>
 
 					<div class="form-group row">
 						<div class="col-md-3">
-							<label for="momentoEmpresarial">Momento Empresarial:</label>
+							<label for="momentoEmpresarial">Momento Empresarial<strong>*</strong>:</label>
 							<input type="text" class="form-control" name="momentoEmpresarial" id="momentoEmpresarial">
 						</div>
 
 						<div class="col-md-3">
-							<label for="ambienteAprendizagem">Ambiente de Aprendizagem:</label>
+							<label for="ambienteAprendizagem">Ambiente de Aprendizagem:<strong>*</strong></label>
 							<input type="text" class="form-control" name="ambienteAprendizagem"
 								id="ambienteAprendizagem">
 						</div>
 
 						<div class="col-md-6">
-							<label for="estrategiasSolucao">Estratégias Metodológicas:</label>
+							<label for="estrategiasSolucao">Estratégias Metodológicas:<strong>*</strong></label>
 							<input type="text" class="form-control" name="estrategiasSolucao" id="estrategiasSolucao">
 						</div>
 					</div>
 
 					<div class="form-group row">
 						<div class="col-md-6">
-							<label for="competenciaSolucao">Competências Gerais:</label>
+							<label for="competenciaSolucao">Competências Gerais:<strong>*</strong></label>
 							<textarea class="form-control" rows="4" name="competenciaSolucao"
 								id="competenciaSolucao"></textarea>
 						</div>
 
 						<div class="col-md-6">
-							<label for="programaSolucao">Conteúdo Programático:</label>
+							<label for="programaSolucao">Conteúdo Programático:<strong>*</strong></label>
 							<textarea class="form-control" rows="4" name="programaSolucao"
 								id="programaSolucao"></textarea>
 						</div>
@@ -239,14 +239,14 @@
 								<div class="form-group row">
 									<div class="col-md-6">
 										<div id="campo-divulg">
-											<label for="campoDivulg">Listar Materiais de Divulgação:</label>
+											<label for="campoDivulg">Listar Materiais de Divulgação:<strong>*</strong></label>
 											<input type="text" class="form-control" name="campoDivulg" id="campoDivulg"
 												placeholder="Informe os detalhes do material de Divulgação">
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div id="campo-apoio">
-											<label for="campoApoio">Listar Materiais de Apoio:</label>
+											<label for="campoApoio">Listar Materiais de Apoio:<strong>*</strong></label>
 											<input type="text" class="form-control" name="campoApoio" id="campoApoio"
 												placeholder="Informe os detalhes do material de apoio">
 										</div>
@@ -290,7 +290,7 @@
 				<div class="panel-body">
 					<div class="form-group row">
 						<div class="col-md-2" id="someMenc">
-							<label for="aprovMenc">Menções Realizadas?</label>
+							<label for="aprovMenc">Menções Realizadas?<strong>*</strong></label>
 							<select class="form-control" name="aprovMenc" id="aprovMenc">
 								<option value="" disabled selected>Selecione uma Opção</option>
 								<option value="Sim">Sim</option>
@@ -299,7 +299,7 @@
 						</div>
 						
 						<div class="col-md-2" id="someMeta">
-							<label for="aprovMeta">Metas de Acordo?</label>
+							<label for="aprovMeta">Metas de Acordo?<strong>*</strong></label>
 							<select class="form-control" name="aprovMeta" id="aprovMeta">
 								<option value="" disabled selected>Selecione uma Opção</option>
 								<option value="Sim">Sim</option>
@@ -322,39 +322,39 @@
 				<div class="panel-body">
 					<div class="form-group row">
 						<div class="col-md-3">
-							<label for="formacao">Formação e Experiência:</label>
+							<label for="formacao">Formação e Experiência:<strong>*</strong></label>
 							<textarea class="form-control" rows="5" name="formacao" id="formacao"></textarea>
 						</div>
 
 						<div class="col-md-3">
-							<label for="conhecimento">Conhecimentos Necessários:</label>
+							<label for="conhecimento">Conhecimentos Necessários:<strong>*</strong></label>
 							<textarea class="form-control" rows="5" name="conhecimento" id="conhecimento"></textarea>
 						</div>
 
 						<div class="col-md-3">
-							<label for="habilidade">Habilidades e Atitudes Desejáveis:</label>
+							<label for="habilidade">Habilidades e Atitudes Desejáveis:<strong>*</strong></label>
 							<textarea class="form-control" rows="5" name="habilidade" id="habilidade"></textarea>
 						</div>
 
 						<div class="col-md-3">
-							<label for="facilita">Experiência em Facilitação Desejada:</label>
+							<label for="facilita">Experiência em Facilitação Desejada:<strong>*</strong></label>
 							<textarea class="form-control" rows="5" name="facilita" id="facilita"></textarea>
 						</div>
 					</div>
 
 					<div class="form-group row">
 						<div class="col-md-5">
-							<label for="areaGSF">Área de conhecimento do SGF recomendada:</label>
+							<label for="areaGSF">Área de conhecimento do SGF recomendada:<strong>*</strong></label>
 							<input type="text" class="form-control" name="areaGSF" id="areaGSF">
 						</div>
 
 						<div class="col-md-5">
-							<label for="subareaSGF">Subárea de conhecimento do SGF recomendada:</label>
+							<label for="subareaSGF">Subárea de conhecimento do SGF recomendada:<strong>*</strong></label>
 							<input type="text" class="form-control" name="subareaSGF" id="subareaSGF">
 						</div>
 
 						<div class="col-md-2">
-							<label for="habilitar">Habilitar em:</label>
+							<label for="habilitar">Habilitar em:<strong>*</strong></label>
 							<select class="form-control" name="habilitar" id="habilitar">
 								<option value="" selected disabled>Selecione uma Opção</option>
 								<option value="instrutoria">Instrutoria</option>
